<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".ui.home.HomeActivity"
    tools:ignore="MissingClass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/search_view_border"            android:focusable="true"
            android:clickable="true"
            android:queryHint="@string/search_hint"/>

        <TextView
            android:id="@+id/plantFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:padding="12dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantFavorite"/>

        <TextView
            android:id="@+id/emptyFavoriteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_message"
            android:visibility="gone"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/plantFavorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/plantClassification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_classification"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/rv_favorite"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_classification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/plantClassification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
